# kinetics-simulation

./: .gitignore  CLI-instruction.md  LICENSE  README.md  control-example.yaml  control.yaml  feature.md  pyproject.toml  requirements.txt
src/kns/: __init__.py  __main__.py  io_plot.py  kinetics.py  parser.py  simulation.py
tests/: alias_order.yaml  catalyst.yaml  duplicate_order.yaml  duplicate_substrate.yaml  negative_rate.yaml  order_conflict.yaml  zero_initial.yaml
