[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kns"
version = "0.1.0"
description = "化学反应浓度-时间模拟工具"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
dependencies = [
    "pyyaml",
    "numpy",
    "matplotlib",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
kns = "kns.simulation:main"

[tool.setuptools.packages.find]
where = ["src"]
